performance: replaced Boolean constructor call with static instances